# challenges

./: README.md
backend/: MAKE-MAGIC-PT.md  (+5 more)
backend/cpp-test/: .gitignore  CMakeLists.txt  README.md
backend/cpp-test/challenges/: CMakeLists.txt
backend/cpp-test/challenges/anagram/: CMakeLists.txt  anagram.cpp  readme.txt
backend/cpp-test/challenges/anagram/tests/: input1.txt  input2.txt  output1.txt  output2.txt
backend/cpp-test/challenges/classroom/: CMakeLists.txt  classroom.cpp  readme.txt
backend/cpp-test/challenges/classroom/tests/: input1.txt  input2.txt  input3.txt  output1.txt  output2.txt  output3.txt
backend/cpp-test/challenges/csv/: CMakeLists.txt  csv.cpp  readme.txt
backend/cpp-test/challenges/csv/tests/: input1.txt  output1.txt
backend/cpp-test/challenges/diamonds_in_the_sky/: CMakeLists.txt  diamonds_in_the_sky.cpp  readme.txt
backend/cpp-test/challenges/dirty_bills/: CMakeLists.txt  dirty_bills.cpp  readme.txt
backend/cpp-test/challenges/dirty_bills/tests/: input1.txt  input3.txt  output1.txt  output2.txt  output3.txt
backend/cpp-test/challenges/fibonacci/: CMakeLists.txt  fibonacci.cpp  readme.txt
backend/cpp-test/challenges/fibonacci/tests/: output6.txt
backend/cpp-test/challenges/functional_anarchy/: CMakeLists.txt  functional_anarchy.cpp  readme.txt
backend/cpp-test/challenges/inheritance/: CMakeLists.txt  inheritance.cpp  readme.txt
backend/cpp-test/challenges/palindrome/: CMakeLists.txt  palindrome.cpp  readme.txt
backend/cpp-test/challenges/stairway_to_heaven/: CMakeLists.txt  readme.txt  stairway_to_heaven.cpp
(+264 files in other folders)
