add_subdirectory(anagram)
add_subdirectory(classroom)
add_subdirectory(csv)
add_subdirectory(diamonds_in_the_sky)
add_subdirectory(dirty_bills)
add_subdirectory(fibonacci)
add_subdirectory(functional_anarchy)
add_subdirectory(inheritance)
add_subdirectory(palindrome)
add_subdirectory(stairway_to_heaven)
